# python-project-49

./: -!  .Makefile.swo  .Makefile.swp  .README.md.swo  .README.md.swp  .gitignore  Makefile  README.md  demo.cast  pyproject.toml  setup.cfg
brain_games/: calc_game.py  cli.py  constant.py  constants.py  even_game.py  game_core.py  main_func.py  main_game_func.py  outsourced_functions.py
brain_games/games/: calc_game.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
